@@ -16,6 +16,9 @@ Version 1.2
   * CMake
   * OOC
 
+- Added options for rendering LaTeX in source code comments in the
+  LaTeX formatter (#461).
+
 - Updated the Logtalk lexer.
 
 - Added `line_number_start` option to image formatter (#456).
